--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   sign_in_with_apple: ^4.3.0
   crypto: ^3.0.1
   flutter_styled_toast: ^2.1.3
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
